src/objects/PurchaseLine__c.object
<CustomObject>
    <description>Line items for purchases</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ItemId__c</fullName>
        <label>Item Id</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Purchase Lines</relationshipLabel>
        <relationshipName>Purchase_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PurchaseId__c</fullName>
        <label>Purchase Id</label>
        <referenceTo>Purchase__c</referenceTo>
        <relationshipLabel>Purchase Lines</relationshipLabel>
        <relationshipName>Purchase_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>UnitCost__c</fullName>
        <label>Unit Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Purchase Line</label>
    <nameField>
        <label>Purchase Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>